--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e65fd3aa",
+   "id": "28a72516",
    "metadata": {},
    "source": [
     "## Lógica usada neste trabalho\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "6bd4b034",
+   "id": "3b792978",
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "c9106dfb",
+   "id": "9c6550c0",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dd45dca5",
+   "id": "fd1d51a2",
    "metadata": {
     "scrolled": false
    },
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd1fc0f4",
+   "id": "6c5c0f79",
    "metadata": {},
    "source": [
     "### reduzindo dimensionalidade de negócios\n",
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1414684d",
+   "id": "f36a9877",
    "metadata": {
     "scrolled": true
    },
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ea24a934",
+   "id": "7d106d6e",
    "metadata": {
     "scrolled": true
    },
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9a19df3",
+   "id": "86500e5f",
    "metadata": {},
    "source": [
     "### Alta Correlação\n",
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95bdff33",
+   "id": "a4d114fe",
    "metadata": {},
    "source": [
     "ρ = 0,9 a 1 (positivo ou negativo): correlação muito forte;\n",
@@ -1368,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "143e9215",
+   "id": "2967dbf0",
    "metadata": {
     "scrolled": true
    },
@@ -1398,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "affb2fe7",
+   "id": "6447bdcb",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d0acbd0",
+   "id": "3d340d1c",
    "metadata": {},
    "source": [
     "Notamos acima muitas colunas com alta correlação. Veremos quais são."
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "98fd0433",
+   "id": "953875d0",
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb599877",
+   "id": "472f7b2e",
    "metadata": {},
    "source": [
     "Vemos então que faz sentido dropar mais colunas, visto que as informações em uma podem estar representadas também em outras."
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aedb0dc",
+   "id": "f675bfd5",
    "metadata": {},
    "source": [
     "Vamos então dropar as seguintes:\n",
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4eceda",
+   "id": "89d97b19",
    "metadata": {},
    "source": [
     "### Nulos\n",
@@ -1654,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "7e52afe1",
+   "id": "c365a5bf",
    "metadata": {
     "scrolled": true
    },
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "508690c2",
+   "id": "d704ad23",
    "metadata": {},
    "source": [
     "Vamos tratar a variável resposta e eliminar os NaN's passando o valor 0."
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "4a2cc9e8",
+   "id": "ce81b056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4134f5d1",
+   "id": "fb1a307f",
    "metadata": {},
    "source": [
     "Observando empresas com nulos"
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "92cb3015",
+   "id": "d44da2aa",
    "metadata": {
     "scrolled": true
    },
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "d13d3276",
+   "id": "f30af67e",
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "77c9cd32",
+   "id": "7a8b17af",
    "metadata": {},
    "outputs": [
     {
@@ -2400,7 +2400,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "7c442804",
+   "id": "aa6dd186",
    "metadata": {
     "scrolled": true
    },
@@ -2626,7 +2626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f62644",
+   "id": "15ef7065",
    "metadata": {},
    "source": [
     "Como podemos ver acima, a quantidade de nulos no df2 foi reduzida em 42.58%.\n",
@@ -2635,7 +2635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81e3ff9e",
+   "id": "c604cbb3",
    "metadata": {},
    "source": [
     "Antes da clusterização, precisamos aumentar o grão em um nível, de forma que cada linha expresse uma empresa. Isso facilitará na análise de clusters e permitirá que tratemos os NaN's ainda presentes com informações dos clusters.\n",
@@ -2646,7 +2646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bef2772",
+   "id": "61f0098e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2658,7 +2658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f67d3832",
+   "id": "2e1810fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2667,7 +2667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1326369",
+   "id": "fd6dda68",
    "metadata": {},
    "source": [
     "#### a fazer \n",
@@ -2675,9 +2675,9 @@
     "\n",
     "add quantidade de solicitações\n",
     "\n",
-    "add quantidade de aprovações\n",
+    "add porcentagem de aprovações\n",
     "\n",
-    "add quantidade de rejeições\n",
+    "add porcentagem de rejeições\n",
     "\n",
     "add data-hora como data e entao add dia-mes-ano para cada variável data"
    ]
@@ -2685,7 +2685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd01ccc7",
+   "id": "d089ff43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2693,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "521e7acd",
+   "id": "f022d0b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2701,7 +2701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa44ccc2",
+   "id": "64e4aae8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2709,7 +2709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1109d332",
+   "id": "de106622",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2717,7 +2717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d0e5a14",
+   "id": "87b6e418",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2725,7 +2725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dcd673b",
+   "id": "61c95901",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2733,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e8e3f5f",
+   "id": "f8bfa346",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2741,7 +2741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a63d40b",
+   "id": "d7ccc2b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2749,7 +2749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda5c59c",
+   "id": "550ac1ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2757,7 +2757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc931a74",
+   "id": "e22de560",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2765,7 +2765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcba0320",
+   "id": "c35a9f64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2773,7 +2773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600d571e",
+   "id": "d831b172",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2781,7 +2781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa773453",
+   "id": "0c5fb794",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2789,7 +2789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07c0dfcd",
+   "id": "6ddb7cd2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc7fb379",
+   "id": "9c07ff9f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2805,7 +2805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d154432",
+   "id": "253361dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2813,14 +2813,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6a89bb0",
+   "id": "1df2dde0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cf590a1a",
+   "id": "2df304e3",
    "metadata": {},
    "source": [
     "Analisando únicos"
@@ -2829,7 +2829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62b020fa",
+   "id": "9ff6166b",
    "metadata": {
     "scrolled": true
    },
@@ -2842,7 +2842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c869197",
+   "id": "9e4eed17",
    "metadata": {},
    "source": [
     "Vemos então que possivelmente as colunas\n",
@@ -2858,7 +2858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8d4ec7",
+   "id": "6130fbd8",
    "metadata": {},
    "outputs": [],
    "source": [
