--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -3397,9 +3397,9 @@
     {
      "data": {
       "text/plain": [
-       "0    65.543205\n",
-       "1    32.126210\n",
-       "2     2.330584\n",
+       "0    63.320186\n",
+       "1    28.970957\n",
+       "2     7.708856\n",
        "Name: label, dtype: float64"
       ]
      },
@@ -3571,7 +3571,7 @@
        "      <td>1.500000e+07</td>\n",
        "      <td>0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2786</th>\n",
@@ -3652,7 +3652,7 @@
        "4      3.000000e+04                 1        2.0      0  \n",
        "...             ...               ...        ...    ...  \n",
        "2784   4.000000e+04                 1        1.0      0  \n",
-       "2785   1.500000e+07                 0        4.0      1  \n",
+       "2785   1.500000e+07                 0        4.0      2  \n",
        "2786   4.000000e+05                 0        4.0      1  \n",
        "2787   2.000000e+05                 0        1.0      0  \n",
        "2788   1.000000e+06                 0        3.0      0  \n",
@@ -3710,39 +3710,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>48.199498</td>\n",
-       "      <td>79432.211228</td>\n",
-       "      <td>2.771445e+07</td>\n",
-       "      <td>5.228383e+07</td>\n",
-       "      <td>10.244074</td>\n",
-       "      <td>1.426339</td>\n",
-       "      <td>6.834751e+06</td>\n",
-       "      <td>0.507812</td>\n",
-       "      <td>4.764509</td>\n",
+       "      <td>44.794245</td>\n",
+       "      <td>22759.202723</td>\n",
+       "      <td>1.003377e+07</td>\n",
+       "      <td>2.258466e+07</td>\n",
+       "      <td>10.393468</td>\n",
+       "      <td>1.422030</td>\n",
+       "      <td>7.173891e+05</td>\n",
+       "      <td>0.523515</td>\n",
+       "      <td>4.415842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>2.295801e+06</td>\n",
-       "      <td>6.737674e+06</td>\n",
-       "      <td>10.406239</td>\n",
-       "      <td>1.476477</td>\n",
-       "      <td>2.337775e+05</td>\n",
-       "      <td>0.603939</td>\n",
-       "      <td>2.415208</td>\n",
+       "      <td>1.752469e+06</td>\n",
+       "      <td>5.359494e+06</td>\n",
+       "      <td>10.394736</td>\n",
+       "      <td>1.495470</td>\n",
+       "      <td>1.744568e+05</td>\n",
+       "      <td>0.619479</td>\n",
+       "      <td>2.394111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8.876923</td>\n",
-       "      <td>5403.035385</td>\n",
-       "      <td>1.934830e+09</td>\n",
-       "      <td>1.378292e+09</td>\n",
-       "      <td>9.630329</td>\n",
-       "      <td>1.292308</td>\n",
-       "      <td>3.387505e+08</td>\n",
-       "      <td>0.123077</td>\n",
-       "      <td>3.784615</td>\n",
+       "      <td>35.209302</td>\n",
+       "      <td>247130.338419</td>\n",
+       "      <td>6.678637e+08</td>\n",
+       "      <td>5.629697e+08</td>\n",
+       "      <td>9.638333</td>\n",
+       "      <td>1.260465</td>\n",
+       "      <td>1.287550e+08</td>\n",
+       "      <td>0.232558</td>\n",
+       "      <td>5.274419</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3750,19 +3750,19 @@
       ],
       "text/plain": [
        "   prazoMedioRecebimentoVendas  titulosEmAberto    totalAtivo  \\\n",
-       "1                    48.199498     79432.211228  2.771445e+07   \n",
-       "0                     0.000000         0.000000  2.295801e+06   \n",
-       "2                     8.876923      5403.035385  1.934830e+09   \n",
+       "1                    44.794245     22759.202723  1.003377e+07   \n",
+       "0                     0.000000         0.000000  1.752469e+06   \n",
+       "2                    35.209302    247130.338419  6.678637e+08   \n",
        "\n",
        "   faturamentoBruto  periodoDemonstrativoEmMeses  intervaloFundacao  \\\n",
-       "1      5.228383e+07                    10.244074           1.426339   \n",
-       "0      6.737674e+06                    10.406239           1.476477   \n",
-       "2      1.378292e+09                     9.630329           1.292308   \n",
+       "1      2.258466e+07                    10.393468           1.422030   \n",
+       "0      5.359494e+06                    10.394736           1.495470   \n",
+       "2      5.629697e+08                     9.638333           1.260465   \n",
        "\n",
        "   capitalSocial  empresa_MeEppMei  qtd_solic  \n",
-       "1   6.834751e+06          0.507812   4.764509  \n",
-       "0   2.337775e+05          0.603939   2.415208  \n",
-       "2   3.387505e+08          0.123077   3.784615  "
+       "1   7.173891e+05          0.523515   4.415842  \n",
+       "0   1.744568e+05          0.619479   2.394111  \n",
+       "2   1.287550e+08          0.232558   5.274419  "
       ]
      },
      "metadata": {},
@@ -4181,7 +4181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 37,
    "id": "755424f1",
    "metadata": {
     "scrolled": false
@@ -4522,7 +4522,7 @@
        "[8930 rows x 17 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4555,7 +4555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 38,
    "id": "643b2302",
    "metadata": {
     "scrolled": true
@@ -4891,7 +4891,7 @@
        "[8754 rows x 16 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4907,7 +4907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "id": "82c311b1",
    "metadata": {},
    "outputs": [],
@@ -4918,7 +4918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 40,
    "id": "6682798f",
    "metadata": {},
    "outputs": [
@@ -5287,8 +5287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "4ae02840",
+   "execution_count": 41,
+   "id": "604c543d",
    "metadata": {},
    "outputs": [
     {
@@ -5297,7 +5297,7 @@
        "dict_keys(['0.0', '1.0', '2.0'])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5314,63 +5314,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "b1614bc8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['prazoMedioRecebimentoVendas', 'titulosEmAberto', 'valorSolicitado',\n",
-       "       'valorAprovado', 'totalAtivo', 'faturamentoBruto',\n",
-       "       'periodoDemonstrativoEmMeses', 'intervaloFundacao', 'capitalSocial',\n",
-       "       'empresa_MeEppMei', 'primeiraCompra_Y', 'primeiraCompra_m',\n",
-       "       'periodoBalanco_Y', 'periodoBalanco_m', 'qtd_solic'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(dict_clusters['1.0'].columns) #demonstrando coluna label removida com sucesso"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "564aafc5",
+   "execution_count": 42,
+   "id": "96a3d27c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def standard_scale_write_picke(df, drop_na = False, write_pickle = False, filename = None):\n",
+    "import pickle\n",
+    "def standard_scale_write_picke(df, write_pickle = False, filename = None):\n",
     "    # transformando o dataframe com standard scaler escrevendo pickle\n",
-    "    if drop_na:\n",
-    "        df = df.dropna()\n",
-    "    \n",
-    "    X = df.drop(columns = 'valorAprovado')\n",
-    "    y = df['valorAprovado']\n",
-    "\n",
     "    sc = StandardScaler()\n",
-    "    sc.fit(X)\n",
+    "    sc.fit(df)\n",
     "    \n",
-    "    if write_pickle:\n",
-    "        if filename != None:\n",
-    "            with open ('Models/standard_scaler_{name}.pkl'.format(filename=filename)\n",
-    "                       ,'wb') as picklefile:\n",
-    "                pickle.dump(sc, picklefile)\n",
+    "    if filename != None:\n",
+    "        with open ('Models/standard_scaler_{filename}.pkl'.format(filename=filename)\n",
+    "                   ,'wb') as picklefile:\n",
+    "            pickle.dump(sc, picklefile)\n",
     "    \n",
-    "    X_z = pd.DataFrame(sc.transform(X))\n",
-    "    X_z.columns = X.columns\n",
+    "    X_z = pd.DataFrame(sc.transform(df))\n",
+    "    X_z.columns = df.columns\n",
     "    \n",
-    "    return X_z, y\n",
+    "    return X_z\n",
     "\n",
     "#aplicando standard scale para todos os clusters\n",
     "for cluster in dict_clusters:\n",
-    "    dict_clusters[cluster] = standard_scale_write_picke(df_le,\n",
-    "                                        drop_na=False,\n",
-    "                                        filename = str(len(dict_clusters[cluster].columns))+cluster)"
+    "    X_z = standard_scale_write_picke(dict_clusters[cluster],\n",
+    "                            filename = str(len(dict_clusters[cluster].columns))+'cols_cluster'+cluster)\n",
+    "    dict_clusters[cluster] = X_z"
    ]
   },
   {
@@ -5383,89 +5352,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "bfcacf29",
-   "metadata": {},
+   "execution_count": 44,
+   "id": "11ea28ae",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cluster 0.0\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_5960\\2133719806.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcluster\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdict_clusters\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'cluster '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[0mcluster\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     print ('\\treduzindo de', dict_clusters[cluster].shape[0],\\\n\u001b[0m\u001b[0;32m      5\u001b[0m            \u001b[1;34m'para'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m            dict_clusters[cluster][(np.abs(stats.zscore(dict_clusters[cluster])) < 3 )\\\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'shape'"
+      "remoção de zscore acima de 3 desvios padrão:\n",
+      "\tcluster 0.0 reduzindo de 4126 para 3715 linhas.\n",
+      "\tcluster 1.0 reduzindo de 3509 para 2931 linhas.\n",
+      "\tcluster 2.0 reduzindo de 1119 para 967 linhas.\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"\n",
     "from scipy import stats\n",
-    "print ('reduzindo de', df_z.shape[0],\\\n",
-    "       'para',\\\n",
-    "       df_z[(np.abs(stats.zscore(df_z)) < 3 ).all(axis=1)].shape[0], 'linhas')\n",
-    "df_z = df_z[(np.abs(stats.zscore(df_z)) < 3 ).all(axis=1)]\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e37358e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input()"
+    "print (\"remoção de zscore acima de 3 desvios padrão:\")\n",
+    "for cluster in sorted(dict_clusters):\n",
+    "    cluster_df = dict_clusters[cluster]\n",
+    "    print ('\\tcluster {} reduzindo de'.format(cluster), cluster_df.shape[0], 'para', end=' ')\n",
+    "    cluster_df = cluster_df[(np.abs(stats.zscore(cluster_df)).fillna(0) < 3 ).all(axis=1)]\n",
+    "    dict_clusters.update({cluster:cluster_df})\n",
+    "    print (cluster_df.shape[0], 'linhas.')\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bcda97ec",
+   "id": "2cc021b9",
    "metadata": {},
    "source": [
-    "#### a fazer \n",
-    "remover outliers antes de modelo preditivo"
+    "###### _Testando modelos e hiperparâmetros por cluster._\n",
+    "Modelos a testar:\n",
+    "* LinearRegression\n",
+    "* RandomForest\n",
+    "* SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "2abd07a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.svm import SVR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "d0e69d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definindo modelos e parâmetros\n",
+    "modelos = {\n",
+    "    'linearRegression':LinearRegression(),\n",
+    "    'RandomForest':RandomForestRegressor(),\n",
+    "    'SVR':SVR()}\n",
+    "params = {\n",
+    "    'linearRegression':\n",
+    "            {},\n",
+    "    'RandomForest':\n",
+    "            {'n_estimators':(50, 100),'min_samples_split':(2, 3),'min_samples_leaf':(1,2)},\n",
+    "    'SVR':\n",
+    "            {'kernel':('rbf','linear','sigmoid')}\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06b0a9f9",
+   "id": "0c0c621c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ef93a1a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 125,
+   "id": "9ccd926a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cluster 0.0\n",
+      "\tmodelo linearRegression\n",
+      "\tmodelo RandomForest\n",
+      "\tmodelo SVR\n",
+      "cluster 1.0\n",
+      "\tmodelo linearRegression\n",
+      "\tmodelo RandomForest\n",
+      "\tmodelo SVR\n",
+      "cluster 2.0\n",
+      "\tmodelo linearRegression\n",
+      "\tmodelo RandomForest\n",
+      "\tmodelo SVR\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_results = {}\n",
+    "for cluster in dict_clusters: #para cada cluster\n",
+    "    print ('cluster', cluster)\n",
+    "    for modelo in modelos: # para cada modelo\n",
+    "        print ('\\tmodelo',modelo)\n",
+    "        parametros = params[modelo]\n",
+    "        modelo_inst = modelos[modelo]\n",
+    "        grid = GridSearchCV(modelo_inst, parametros, scoring = 'r2', cv=5)\n",
+    "        \n",
+    "        df = dict_clusters[cluster]\n",
+    "        X = df.drop(columns = ['valorAprovado'])\n",
+    "        y = df['valorAprovado']\n",
+    "        \n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.1)\n",
+    "        \n",
+    "        grid.fit(X_train, y_train)\n",
+    "        \n",
+    "        #tratando resultados\n",
+    "        df_result = pd.DataFrame(grid.cv_results_)\n",
+    "        df_result = df_result[df_result['rank_test_score']==1]\n",
+    "        df_result['model'] = modelo\n",
+    "        df_result['cluster'] = cluster\n",
+    "        df_result = df_result[['model', 'cluster', 'params', 'mean_test_score']]\n",
+    "        df_result.columns = ['model', 'cluster', 'params', 'r2_score']\n",
+    "        \n",
+    "        try:\n",
+    "            df_results[modelo].append(df_result)\n",
+    "        except:\n",
+    "            df_results.update({modelo:[df_result]})\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2abd07a2",
+   "execution_count": 126,
+   "id": "447f2c10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for model in df_results:\n",
+    "    df_results[model] = pd.concat(df_results[model])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "24a73650",
+   "execution_count": 131,
+   "id": "99be8ed8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>cluster</th>\n",
+       "      <th>params</th>\n",
+       "      <th>r2_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>{'min_samples_leaf': 2, 'min_samples_split': 3...</td>\n",
+       "      <td>0.545092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>{'min_samples_leaf': 2, 'min_samples_split': 2...</td>\n",
+       "      <td>0.691877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>{'min_samples_leaf': 2, 'min_samples_split': 3...</td>\n",
+       "      <td>0.706014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          model cluster                                             params  \\\n",
+       "6  RandomForest     0.0  {'min_samples_leaf': 2, 'min_samples_split': 3...   \n",
+       "4  RandomForest     1.0  {'min_samples_leaf': 2, 'min_samples_split': 2...   \n",
+       "6  RandomForest     2.0  {'min_samples_leaf': 2, 'min_samples_split': 3...   \n",
+       "\n",
+       "   r2_score  \n",
+       "6  0.545092  \n",
+       "4  0.691877  \n",
+       "6  0.706014  "
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results['RandomForest']"
+   ]
   },
   {
    "cell_type": "code",
